--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             Get ready to Quiz and be amazed!
           </p>
         </div>
-        <button
+        <a
+          href="/blogs/blog.html"
           class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white"
         >
           Blog
-        </button>
+        </a>
       </nav>
     </header>
     <!-- Header/Navbar section end -->
