--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         >
           Blog
         </a>
+        <a
+          href="/myblogs/myBlogs.html"
+          class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white"
+        >
+         My Blog
+        </a>
       </nav>
     </header>
     <!-- Header/Navbar section end -->
